添加Activity 进入，退出动画

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="main_discovery_profile_text">我</string>
     <string name="main_discovery_downloadting_text">下载听</string>
     <string name="main_discovery_custom_text">定制听</string>
+    <string name="title_activity_test_recommend">TestRecommend</string>
 </resources>
