--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="main_discovery_custom_text">定制听</string>
     <string name="title_activity_test_recommend">TestRecommend</string>
     <string name="title_activity_base">BaseActivity</string>
+    <string name="the_title">标题</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 </resources>
